syntax = "proto3";

option go_package = "due-examples/cluster/internal/protocol/hall";

package hall;

message RegisterReq {
  string Account = 1; // 账号
  string Password = 2; // 密码
  string Nickname = 3; // 昵称
}

message RegisterRes {
  int32 Code = 1; // 错误码
}

message LoginReq {
  string Account = 1; // 账号
  string Password = 2; // 密码
}

message LoginRes {
  int32 Code = 1; // 错误码
}

message FetchProfileRes {
  int32 Code = 1; // 错误码
  Profile Data = 2; // 资料信息
}

message Profile {
  int64 UID = 1; // 用户ID
  string Account = 2; // 账号
  string Nickname = 3; // 昵称
}