syntax = "proto3";

option go_package = "./pb";

package pb;

service User {
  // 注册账号
  rpc Register(RegisterRequest) returns (RegisterReply) {}
  // 登录账号
  rpc Login(LoginRequest) returns (LoginReply) {}
  // 拉取资料
  rpc FetchProfile(FetchProfileRequest) returns (FetchProfileReply) {}
}

message RegisterRequest {
  string Account = 1; // 账号
  string Password = 2; // 密码
  string Nickname = 3; // 昵称
}

message RegisterReply {

}

message LoginRequest {
  string Account = 1; // 账号
  string Password = 2; // 密码
}

message LoginReply {
  int64 UID = 1; // 用户ID
}

message FetchProfileRequest {
  int64 UID = 1; // 用户ID
}

message FetchProfileReply {
  string Account = 1; // 账号
  string Nickname = 2; // 昵称
}
